fix box builder z-index

--- a/Box/box-builder.less
+++ b/Box/box-builder.less
@@ -12,6 +12,7 @@
 .floxim-ui-box-builder {
     display:inline-flex;
     position:relative;
+    z-index:0;
     background:#FFF;
     
     &__value {
